--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,45 @@ name: Run tests
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ bit ]
   pull_request:
-    branches: [ develop ]
+    branches: [ bit ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    container: gradle:jdk11
+    services:
+      postgres:
+        image: postgres
+        env: 
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
     - uses: actions/checkout@v2
+    - run: |
+        apt-get update
+        apt-get install --yes --no-install-recommends postgresql-client
+    - name: Connect to PostgreSQL
+      run: |
+        PGPASSWORD=postgres psql -h postgres -c 'CREATE DATABASE bit_schema_test;' -U postgres
+        PGPASSWORD=postgres psql -h postgres -c 'CREATE SCHEMA bitschema;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c 'CREATE SCHEMA test_schema;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c 'create SCHEMA test_schema_2;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c '\dn;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c 'show search_path;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c "ALTER DATABASE bit_schema_test SET search_path TO bitschema,public;" -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h postgres -c 'show search_path;' -U postgres -d bit_schema_test
+      env:
+        POSTGRES_HOST: postgres
+        POSTGRES_PORT: 5432
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
