--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,11 @@ jobs:
     container: gradle:jdk11
     services:
       postgres:
-        image: postgres
+        image: postgres:latest
         env: 
           POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -41,7 +43,7 @@ jobs:
         psql -c "ALTER DATABASE bit_schema_test SET search_path TO bitschema,public;" -U postgres -d bit_schema_test
         psql -c 'show search_path;' -U postgres -d bit_schema_test
       env:
-        POSTGRES_HOST: postgres
+        POSTGRES_HOST: localhost
         POSTGRES_PORT: 5432
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
