--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,10 @@ jobs:
         python-version: 3.6
     - name: Install dependencies
       run: |
-        sudo python -m pip install --upgrade pip
+        python --version 
+        python3 --version 
+        pip --version 
+        python3 -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run tests
       run: |
