--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: gradle:jdk11
     services:
       postgres:
         image: postgres
@@ -42,7 +41,7 @@ jobs:
         PGPASSWORD=postgres psql -h postgres -c "ALTER DATABASE bit_schema_test SET search_path TO bitschema,public;" -U postgres -d bit_schema_test
         PGPASSWORD=postgres psql -h postgres -c 'show search_path;' -U postgres -d bit_schema_test
       env:
-        POSTGRES_HOST: postgres
+        POSTGRES_HOST: localhost
         POSTGRES_PORT: 5432
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
