--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Connect to PostgreSQL
       run: |
-        PGPASSWORD=postgres psql -h postgres -c 'CREATE DATABASE bit_schema_test;' -U postgres
-        PGPASSWORD=postgres psql -h postgres -c 'CREATE SCHEMA bitschema;' -U postgres -d bit_schema_test
-        PGPASSWORD=postgres psql -h postgres -c 'CREATE SCHEMA test_schema;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h localhost -c 'CREATE DATABASE bit_schema_test;' -U postgres
+        PGPASSWORD=postgres psql -h localhost -c 'CREATE SCHEMA bitschema;' -U postgres -d bit_schema_test
+        PGPASSWORD=postgres psql -h localhost -c 'CREATE SCHEMA test_schema;' -U postgres -d bit_schema_test
         PGPASSWORD=postgres psql -h postgres -c 'create SCHEMA test_schema_2;' -U postgres -d bit_schema_test
         PGPASSWORD=postgres psql -h postgres -c '\dn;' -U postgres -d bit_schema_test
         PGPASSWORD=postgres psql -h postgres -c 'show search_path;' -U postgres -d bit_schema_test
